src/test/deca/codegen/valid/biblio/ModifTab.deca
class T{
    int [] t;
}


{
    T u = new T();
}
