src/test/deca/codegen/invalid/objet/MethodDontRteurnTheValue.deca
class A{
     int main(){
     }
}

{
	A a = new A();
	int x = a.main();
}